package com.smartedu.demy.platform.attendance.domain.model.valueobjects;

public enum AttendanceStatus {
    PRESENT,
    ABSENT
}
